--- a/index.html
+++ b/index.html
@@ -572,6 +572,25 @@
       </div>
     </div>                                                                                                     
 
+    <!--Tanvi's playlist -->
+    <div class="card">
+      <div class="image">
+        <img
+          src="https://img.freepik.com/free-vector/musical-pentagram-sound-waves-notes-background_1017-33911.jpg" />
+      </div>
+      <div class="title">
+        <h1>On Repeat</h1>
+        <h6>By Tanvi</h6>
+      </div>
+      <div class="des">
+        <iframe style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuYBpOxLPHuz?utm_source=generator" width="100%"
+          height="380" frameborder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <button>For the love of music!!</button>
+      </div>
+    </div>                                                                                                       
+                                                                                                           
      <!--Saumya's card -->
   <div class="card">
     <div class="image">
